--- a/data/cards/02362787.yaml
+++ b/data/cards/02362787.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Paga 800 Life Point poi scegli come bersaglio 1 dei tuoi mostri LUCE banditi; aggiungi quel bersaglio alla tua mano.
   pt: |-
-    Pague 800 Pontos de Vida e, depois, escolha 1 dos seus monstros de LUZ banidos; adicione o alvo à sau mão.
+    Pague 800 Pontos de Vida e, depois, escolha 1 dos seus monstros de LUZ banidos; adicione o alvo à sua mão.
   ja: |-
     ①：８００ＬＰを払い、除外されている自分の光属性モンスター１体を対象として発動できる。そのモンスターを手札に加える。
   ko: |-
