--- a/data/cards/03289027.yaml
+++ b/data/cards/03289027.yaml
@@ -2,11 +2,11 @@ konami_id: 17984
 password: 3289027
 name:
   en: Parl, Hermit of Dark World
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Parl, Einsiedler der Finsteren Welt
+  es: Parl, Ermitaño del Mundo Oscuro
+  fr: Parl, Ermite du Monde Ténébreu
+  it: Parl, Eremita del Mondo Oscuro
+  pt: Parl, Eremita do Mundo Negro
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>隠<rt>いん</rt></ruby><ruby>者<rt>じゃ</rt></ruby> パアル
   ja_romaji: Ankokukai no Inja Paaru
   ko: 암흑계의 은둔자 파알
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If this card is discarded to the GY by card effect: You can target 1 "Dark World" monster in your GY, except "Parl, Hermit of Dark World"; Special Summon it to either field, then, if this card was discarded from your hand to your GY by an opponent's card effect, you can Special Summon, to either field, 1 of your Fiend monsters that is banished, or in your hand or GY. You can only use this effect of "Parl, Hermit of Dark World" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte durch einen Karteneffekt auf den Friedhof abgeworfen wird: Du kannst 1 „Finsteren Welt“-Monster in deinem Friedhof wählen, außer „Parl, Einsiedler der Finsteren Welt“; beschwöre es als Spezialbeschwörung auf eine beliebige Spielfeldseite, dann, falls diese Karte durch einen Karteneffekt eines Gegners von deiner Hand auf deinen Friedhof abgeworfen wurde, kannst du 1 deiner Unterweltler-Monster, das verbannt ist oder sich in deiner Hand oder deinem Friedhof befindet, als Spezialbeschwörung auf eine beliebige Spielfeldseite beschwören. Du kannst diesen Effekt von „Parl, Einsiedler der Finsteren Welt“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si esta carta es descartada al Cementerio por efecto de una carta: puedes seleccionar 1 monstruo "Mundo Oscuro" en tu Cementerio, excepto "Parl, Ermitaño del Mundo Oscuro"; Invócalo de Modo Especial a cualquier Campo y después, si esta carta fue descartada de tu mano a tu Cementerio por efecto de una carta del adversario, puedes Invocar de Modo Especial, a cualquier Campo, 1 de tus monstruos Demonio que esté desterrado, o en tu mano o Cementerio. Sólo puedes usar este efecto de "Parl, Ermitaño del Mundo Oscuro" una vez por turno.
+  fr: |-
+    Si cette carte est défaussée au Cimetière par un effet de carte : vous pouvez cibler 1 monstre "Monde Ténébreux" ("Parl, Ermite du Monde Ténébreux" exclu) dans votre Cimetière ; Invoquez-le Spécialement sur l'un des Terrains, puis, si cette carte a été défaussée depuis votre main à votre Cimetière par un effet de carte de l'adversaire, vous pouvez Invoquer Spécialement, sur l'un des Terrains, 1 de vos monstres Démon qui est banni, ou dans votre main ou Cimetière. Vous ne pouvez utiliser cet effet de "Parl, Ermite du Monde Ténébreux" qu'une fois par tour.
+  it: |-
+    Se questa carta viene scartata al Cimitero dall'effetto di una carta: puoi scegliere come bersaglio 1 mostro "Mondo Oscuro" nel tuo Cimitero, eccetto "Parl, Eremita del Mondo Oscuro"; Evocalo Specialmente su qualsiasi Terreno, poi, se questa carta è stata scartata dalla tua mano al tuo Cimitero dall'effetto di una carta dell'avversario, puoi Evocare Specialmente, su qualsiasi Terreno, 1 dei tuoi mostri Demone che sono banditi, o nella tua mano o Cimitero. Puoi utilizzare questo effetto di "Parl, Eremita del Mondo Oscuro" una sola volta per turno.
+  pt: |-
+    Se este card for descartado para o Cemitério por um efeito de card: você pode escolher 1 monstro "Mundo Negro" no seu Cemitério, exceto "Parl, Eremita do Mundo Negro"; Invoque-o por Invocação-Especial em qualquer campo e, depois, se este card foi descartado da sua mão para o seu Cemitério por um efeito de card do oponente, você pode Invocar por Invocação-Especial, em qualquer campo, 1 dos seus monstros Demônio que estiverem banidos, ou na sua mão ou no Cemitério. Você só pode usar este efeito de "Parl, Eremita do Mundo Negro" uma vez por turno.
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：このカードが効果で手札から墓地へ捨てられた場合、「暗黒界の隠者 パアル」以外の自分の墓地の「暗黒界」モンスター１体を対象として発動できる。そのモンスターを自分または相手フィールドに特殊召喚する。相手の効果で捨てられた場合、さらに自分の手札・墓地のモンスター及び除外されている自分のモンスターの中から、悪魔族モンスター１体を選んで自分または相手フィールドに特殊召喚できる。
   ko: |-
