--- a/data/cards/30284022.yaml
+++ b/data/cards/30284022.yaml
@@ -2,11 +2,11 @@ konami_id: 17985
 password: 30284022
 name:
   en: Dark World Puppetry
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Puppenspielerei der Finsteren Welt
+  es: Arte del Titiritero del Mundo Oscuro
+  fr: Art des Marionnettes du Monde Ténébreu
+  it: Marionettistica del Mondo Oscuro
+  pt: Fantoches do Mundo Negro
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>傀<rt>かい</rt></ruby><ruby>儡<rt>らい</rt></ruby>
   ja_romaji: Ankokukai no Kairai
   ko: 암흑계의 괴뢰
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Target up to 3 cards in any GY(s); banish them, then discard 1 Fiend monster. During your Main Phase, except the turn this card was sent to the GY: You can banish this card from your GY, then target 1 of your banished Fiend monsters; add it to your hand. You can only activate 1 "Dark World Puppetry" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wähle bis zu 3 Karten in beliebigen Friedhöfen; verbanne sie, dann wirf 1 Unterweltler-Monster ab. Während deiner Main Phase, außer in dem Spielzug, in dem diese Karte auf den Friedhof gelegt wurde: Du kannst diese Karte von deinem Friedhof verbannen und dann 1 deiner verbannten Unterweltler-Monster wählen; füge es deiner Hand hinzu. Du kannst nur 1 „Puppenspielerei der Finsteren Welt“ pro Spielzug aktivieren.
+  es: |-
+    Selecciona hasta 3 cartas en cualquier Cementerio; destiérralas, y después descarta 1 monstruo Demonio. Durante tu Main Phase, excepto en el turno en el que esta carta fue mandada al Cementerio: puedes desterrar esta carta en tu Cementerio, y después seleccionar 1 de tus monstruos Demonio desterrados; añádelo a tu mano. Sólo puedes activar 1 "Arte del Titiritero del Mundo Oscuro" por turno.
+  fr: |-
+    Ciblez max. 3 cartes dans les Cimetières ; bannissez-les, puis défaussez 1 monstre Démon. Durant votre Main Phase, sauf le tour où cette carte a été envoyée au Cimetière : vous pouvez bannir cette carte depuis votre Cimetière, puis ciblez 1 de vos monstres Démon bannis ; ajoutez-le à votre main. Vous ne pouvez activer qu'1 "Art des Marionnettes du Monde Ténébreux" par tour.
+  it: |-
+    Scegli come bersaglio fino a 3 carte in qualsiasi Cimitero; bandiscile, poi scarta 1 mostro Demone. Durante la tua Main Phase, eccetto nel turno in cui questa carta è stata mandata al Cimitero: puoi bandire questa carta dal tuo Cimitero, poi scegliere come bersaglio 1 dei tuoi mostri Demone banditi; aggiungilo alla tua mano. Puoi attivare solo 1 "Marionettistica del Mondo Oscuro" per turno.
+  pt: |-
+    Escolha até 3 cards em quaisquer Cemitérios; bana-os e, depois, descarte 1 monstro Demônio. Durante sua Fase Principal, exceto no turno em que este card foi enviado para o Cemitério: você pode banir este card do seu Cemitério e, depois, escolha 1 dos seus monstros Demônio banidos; adicione-o à sua mão. Você só pode ativar 1 "Fantoches do Mundo Negro" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：お互いの墓地のカードを合計３枚まで対象として発動できる。そのカードを除外する。その後、手札から悪魔族モンスター１体を選んで捨てる。②：自分メインフェイズに墓地のこのカードを除外し、除外されている自分の悪魔族モンスター１体を対象として発動できる。そのモンスターを手札に加える。この効果はこのカードが墓地へ送られたターンには発動できない。
   ko: |-
