--- a/data/cards/65956182.yaml
+++ b/data/cards/65956182.yaml
@@ -2,11 +2,11 @@ konami_id: 17989
 password: 65956182
 name:
   en: Dark World Accession
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Amtsantritt der Finsteren Welt
+  es: Accesión del Mundo Oscuro
+  fr: Avènement au Monde Ténébreu
+  it: Ascesa Mondo Oscuro
+  pt: Acessão do Mundo Negro
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>登<rt>とう</rt></ruby><ruby>極<rt>きょく</rt></ruby>
   ja_romaji: Ankokukai no Tōkyoku
   ko: 암흑계의 등극
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     During the Main Phase: Fusion Summon 1 Fiend Fusion Monster from your Extra Deck, by banishing materials mentioned on it from your field or GY. If Fusion Summoning a "Dark World" monster this way, you can also discard monsters as material. During your Main Phase, if this card is in your GY: You can add this card to your hand, then discard 1 "Dark World" monster. You can only use each effect of "Dark World Accession" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während der Main Phase: Beschwöre 1 Unterweltler-Fusionsmonster als Fusionsbeschwörung von deinem Extra Deck, indem du das auf ihm erwähnte Material von deiner Spielfeldseite oder deinem Friedhof verbannst. Falls du auf diese Art ein „Finsteren Welt“-Monster als Fusionsbeschwörung beschwörst, kannst du als Material auch Monster abwerfen. Während deiner Main Phase, falls sich diese Karte in deinem Friedhof befindet: Du kannst diese Karte deiner Hand hinzufügen, dann wirf 1 „Finsteren Welt“-Monster ab. Du kannst jeden Effekt von „Amtsantritt der Finsteren Welt“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Durante la Main Phase: Invoca por Fusión, desde tu Deck Extra, 1 Monstruo de Fusión Demonio, desterrando de tu Campo o Cementerio materiales mencionados en él. Si Invocas por Fusión un monstruo "Mundo Oscuro" de esta forma, también puedes descartar monstruos como material. Durante tu Main Phase, si esta carta está en tu Cementerio: puedes añadir esta carta a tu mano, y después descarta 1 monstruo "Mundo Oscuro". Sólo puedes usar cada efecto de "Accesión del Mundo Oscuro" una vez por turno.
+  fr: |-
+    Durant la Main Phase : Invoquez par Fusion 1 Monstre Fusion Démon depuis votre Extra Deck, en bannissant les Matériels mentionnés sur celui-ci depuis votre Terrain ou Cimetière. Si vous Invoquez par Fusion un monstre "Monde Ténébreux" de cette façon, vous pouvez aussi défausser des monstres comme Matériel. Durant votre Main Phase, si cette carte est dans votre Cimetière : vous pouvez ajouter cette carte à votre main, puis défaussez 1 monstre "Monde Ténébreux". Vous ne pouvez utiliser chaque effet de "Avènement au Monde Ténébreux" qu'une fois par tour.
+  it: |-
+    Durante la Main Phase: Evoca tramite Fusione 1 Mostro Fusione Demone dal tuo Extra Deck, bandendo i materiali menzionati su di esso dal tuo Terreno o Cimitero. Se stai Evocando tramite Fusione un mostro "Mondo Oscuro" in questo modo, puoi anche scartare mostri come materiale. Durante la tua Main Phase, se questa carta è nel tuo Cimitero: puoi aggiungere questa carta alla tua mano, poi scartare 1 mostro "Mondo Oscuro". Puoi utilizzare ogni effetto di "Ascesa Mondo Oscuro" una sola volta per turno.
+  pt: |-
+    Durante a Fase Principal: Invoque por Invocação-Fusão 1 Monstro de Fusão Demônio do seu Deck Adicional, ao banir matérias mencionadas nele do seu campo ou Cemitério. Se estiver Invocando um monstro "Mundo Negro" por Invocação-Fusão desta forma, você também pode descartar monstros como matéria. Durante sua Fase Principal, se este card estiver no seu Cemitério: você pode adicionar este card à sua mão e, depois, descarte 1 monstro "Mundo Negro". Você só pode usar cada efeito de "Acessão do Mundo Negro" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：お互いのメインフェイズに発動できる。自分のフィールド・墓地から、悪魔族の融合モンスターカードによって決められた融合素材モンスターを除外し、その融合モンスター１体をＥＸデッキから融合召喚する。「暗黒界」モンスターを融合召喚する場合、手札のモンスターを捨てて融合素材とする事もできる。②：このカードが墓地に存在する場合、自分メインフェイズに発動できる。このカードを手札に加える。その後、手札から「暗黒界」モンスター１体を選んで捨てる。
   ko: |-
