--- a/data/cards/77895328.yaml
+++ b/data/cards/77895328.yaml
@@ -2,11 +2,11 @@ konami_id: 17983
 password: 77895328
 name:
   en: Genta, Gateman of Dark World
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Genta, Torhüter der Finsteren Welt
+  es: Genta, Guarda del Mundo Oscuro
+  fr: Genta, Portier du Monde Ténébreu
+  it: Genta, Uomo del Cancello del Mondo Oscuro
+  pt: Genta, Zelador do Mundo Negro
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>門<rt>もん</rt></ruby><ruby>番<rt>ばん</rt></ruby> ゼンタ
   ja_romaji: Ankokukai no Monban Zenta
   ko: 암흑계의 문지기 젠타
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can only Special Summon "Genta, Gateman of Dark World" once per turn. You can discard this card to the GY; add 1 "The Gates of Dark World" from your Deck to your hand. If this card is banished and you control a "Dark World" card: You can Special Summon this card.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst „Genta, Torhüter der Finsteren Welt“ nur einmal pro Spielzug als Spezialbeschwörung beschwören. Du kannst diese Karte auf den Friedhof abwerfen; füge deiner Hand 1 „Die Tore der Finsteren Welt“ von deinem Deck hinzu. Falls diese Karte verbannt wird und du eine „Finsteren Welt“-Karte kontrollierst: Du kannst diese Karte als Spezialbeschwörung beschwören.
+  es: |-
+    Sólo puedes Invocar de Modo Especial "Genta, Guarda del Mundo Oscuro" una vez por turno. Puedes descartar esta carta al Cementerio; añade a tu mano 1 "Las Puertas del Mundo Oscuro" en tu Deck. Si esta carta es desterrada y tú controlas una carta "Mundo Oscuro": puedes Invocar esta carta de Modo Especial.
+  fr: |-
+    Vous ne pouvez Invoquer Spécialement "Genta, Portier du Monde Ténébreux" qu'une fois par tour. Vous pouvez défausser cette carte au Cimetière ; ajoutez 1 "Portail du Monde Ténébreux" depuis votre Deck à votre main. Si cette carte est bannie et que vous contrôlez une carte "Monde Ténébreux" : vous pouvez Invoquer Spécialement cette carte.
+  it: |-
+    Puoi Evocare Specialmente "Genta, Uomo del Cancello del Mondo Oscuro" una sola volta per turno. Puoi scartare questa carta al Cimitero; aggiungi 1 "I Portali del Mondo Oscuro" dal tuo Deck alla tua mano. Se questa carta viene bandita e tu controlli una carta "Mondo Oscuro": puoi Evocare Specialmente questa carta.
+  pt: |-
+    Você só pode Invocar "Genta, Zelador do Mundo Negro" por Invocação-Especial uma vez por turno. Você pode descartar este card para o Cemitério; adicione 1 "Os Portões do Mundo Negro" do seu Deck à sua mão. Se este card for banido e você controlar um card "Mundo Negro": você pode Invocar este card por Invocação-Especial.
   ja: |-
     自分は「暗黒界の門番 ゼンタ」を１ターンに１度しか特殊召喚できない。①：このカードを手札から墓地へ捨てて発動できる。デッキから「暗黒界の門」１枚を手札に加える。②：このカードが除外された場合、自分フィールドに「暗黒界」カードが存在していれば発動できる。このカードを特殊召喚する。
   ko: |-
