--- a/data/cards/37192109.yaml
+++ b/data/cards/37192109.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>PSY<rt>싸이</rt></ruby>프레임로드 <ruby>Ζ<rt>제타</rt></ruby>
   ko_rr:
   zh-TW:
-  zh-CN: PSY骨架王·Ζ
+  zh-CN: 精神骨架装载王 截塔
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -40,8 +40,8 @@ text:
     ① : 1턴에 1번, 상대 필드의 특수 소환된 앞면 공격 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와 필드의 이 카드를 다음 자신 스텐바이 페이즈까지 제외한다. 이 효과는 상대 턴에도 발동할 수 있다. ② : 이 카드가 묘지로 보내졌을 경우, 이 카드 이외의 자신의 묘지의 "PSY(싸이)프레임" 카드 1장을 대상으로 하고 발동할 수 있다. 이 카드를 엑스트라 덱에 되돌리고, 대상의 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    ①：1回合1次，以对方场上1只特殊召唤的表侧攻击表示怪兽为对象才能发动。那只怪兽和场上的这张卡直到下次的自己准备阶段除外。这个效果在对方回合也能发动。②：这张卡在墓地存在的场合，以这张卡以外的自己墓地1张「PSYフレーム」卡为对象才能发动。这张卡回到额外卡组，作为对象的卡加入手卡。
+    协调＋1只以上协调以外的怪兽
+    ①：1回合1次，以对手场上1只被特殊召唤的表侧攻击表示怪兽为对象可以发动。将该怪兽和场上的此卡直至下一个自己准备阶段为止除外。此效果在对手回合中也可以发动。②：此卡存在于墓地的情况下，以自己墓地此卡以外的1张"精神骨架"卡为对象可以发动。将此卡放回额外牌组，将对象卡加入手牌。
 card_type: Monster
 monster_type_line: Psychic / Synchro / Effect
 attribute: LIGHT
@@ -108,6 +108,11 @@ sets:
   ko:
   - set_number: SPHR-KR034
     set_name: 'Booster SP: Highspeed Riders'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: CL02-SC125
+    set_name: Classic Pack 02
     rarities:
     - Super Rare
 limit_regulation:
