--- a/data/cards/39552584.yaml
+++ b/data/cards/39552584.yaml
@@ -2,11 +2,11 @@ konami_id: 17988
 password: 39552584
 name:
   en: Grapha, Dragon Overlord of Dark World
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Grapha, Drachenoberherrscher der Finsteren Welt
+  es: Grapha, Señor Supremo Dragón del Mundo Oscuro
+  fr: Grapha, Chef Suprême Dragon du Monde Ténébreu
+  it: Grapha, Sovrano Drago del Mondo Oscuro
+  pt: Grapha, Suserano Dragão do Mundo Negro
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>龍<rt>りゅう</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>王<rt>おう</rt></ruby> グラファ
   ja_romaji: Ankokukai no Ryūshin'ō Gurafa
   ko: 암흑계의 용신왕 그라파
@@ -17,11 +17,21 @@ text:
   en: |-
     "Grapha, Dragon Lord of Dark World" + 1 DARK monster
     When your opponent activates a monster effect, or a Normal Spell/Trap Card, while you have a card(s) in your hand (Quick Effect): You can activate this effect; the activated effect becomes "Your opponent discards 1 card". You can only use this effect of "Grapha, Dragon Overlord of Dark World" once per turn. If this Fusion Summoned card in its owner's control leaves the field because of an opponent's card: You can Special Summon 1 of your "Grapha, Dragon Lord of Dark World" that is banished or in your GY, then each player with a hand discards 1 card.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    „Grapha, Drachenherrscher der Finsteren Welt“ + 1 FINSTERNIS Monster
+    Wenn dein Gegner einen Monstereffekt oder eine Normale Zauber-/Fallenkarte aktiviert, solange du eine oder mehr Karten in deiner Hand hast (Schnelleffekt): Du kannst diesen Effekt aktivieren; der aktivierte Effekt wird zu „Dein Gegner wirft 1 Karte ab.“ Du kannst diesen Effekt von „Grapha, Drachenoberherrscher der Finsteren Welt“ nur einmal pro Spielzug verwenden. Falls diese als Fusionsbeschwörung beschworene Karte, die ihr Besitzer kontrolliert, das Spielfeld durch eine Karte eines Gegners verlässt: Du kannst 1 deiner „Grapha, Drachenherrscher der Finsteren Welt“, der verbannt ist oder sich in deinem Friedhof befindet, als Spezialbeschwörung beschwören, dann wirft jeder Spieler mit einer Hand 1 Karte ab.
+  es: |-
+    "Grapha, Señor Dragón del Mundo Oscuro" + 1 monstruo de OSCURIDAD
+    Cuando tu adversario activa el efecto de un monstruo, o una Carta Mágica/de Trampa Normal, mientras tengas una o más cartas en tu mano (Efecto Rápido): puedes activar este efecto; el efecto activado se convierte en "Tu adversario descarta 1 carta". Sólo puedes usar este efecto de "Grapha, Señor Supremo Dragón del Mundo Oscuro" una vez por turno. Si esta carta Invocada por Fusión controlada por su dueño deja el Campo a causa de una carta del adversario: puedes Invocar de Modo Especial 1 de tus "Grapha, Señor Dragón del Mundo Oscuro" que esté desterrado o en tu Cementerio, y después cada jugador que tenga cartas en la mano descarta 1 carta.
+  fr: |-
+    "Grapha, Seigneur Dragon du Monde Ténébreux" + 1 monstre TÉNÈBRES
+    Lorsque votre adversaire active un effet de monstre ou une Carte Magie Normale/Piège Normal, tant que vous avez une ou plusieurs cartes dans votre main (Effet Rapide) : vous pouvez activer cet effet ; l'effet activé devient "Votre adversaire défausse 1 carte". Vous ne pouvez utiliser cet effet de "Grapha, Chef Suprême Dragon du Monde Ténébreux" qu'une fois par tour. Si cette carte Invoquée par Fusion contrôlée par son propriétaire quitte le Terrain à cause d'une carte de l'adversaire : vous pouvez Invoquer Spécialement 1 de vos "Grapha, Seigneur Dragon du Monde Ténébreux" qui est banni ou dans votre Cimetière, puis chaque joueur avec une main défausse 1 carte.
+  it: |-
+    "Grapha, Signore Drago del Mondo Oscuro" + 1 mostro OSCURITÀ
+    Quando il tuo avversario attiva l'effetto di un mostro, o una Carta Magia/Trappola Normale, mentre tu hai una o più carte nella tua mano (Effetto Rapido): puoi attivare questo effetto; l'effetto attivato diventa "Il tuo avversario scarta 1 carta". Puoi utilizzare questo effetto di "Grapha, Sovrano Drago del Mondo Oscuro" una sola volta per turno. Se questa carta Evocata tramite Fusione sotto il controllo del suo proprietario lascia il Terreno per una carta dell'avversario: puoi Evocare Specialmente 1 dei tuoi "Grapha, Signore Drago del Mondo Oscuro" che sono banditi o nel tuo Cimitero, poi ogni giocatore con carte in mano scarta 1 carta.
+  pt: |-
+    "Grapha, Senhor Dragão do Mundo Negro" + 1 monstro de TREVAS
+    Quando seu oponente ativar um efeito de monstro, ou um Card de Magia/Armadilha Normal, enquanto você tiver um ou mais cards na sua mão (Efeito Rápido): você pode ativar este efeito; o efeito ativado se torna "Seu oponente descarta 1 card". Você só pode usar este efeito de "Grapha, Suserano Dragão do Mundo Negro" uma vez por turno. Se este card Invocado por Invocação-Fusão sob o controle do seu dono deixar o campo devido a um card do oponente: você pode Invocar por Invocação-Especial 1 dos seus "Grapha, Senhor Dragão do Mundo Negro" que estiverem banidos ou no seu Cemitério e, depois, cada duelista que tenha uma mão descarta 1 card.
   ja: |-
     「暗黒界の龍神 グラファ」＋闇属性モンスター
     このカード名の①の効果は１ターンに１度しか使用できない。①：相手がモンスターの効果・通常魔法・通常罠カードを発動した時に発動できる。その効果は「相手は自身の手札を１枚選んで捨てる」となる。②：融合召喚したこのカードが相手によってフィールドから離れた場合に発動できる。自分の墓地のモンスター及び除外されている自分のモンスターの中から、「暗黒界の龍神 グラファ」１体を選んで特殊召喚する。その後、手札があるプレイヤーは自身の手札を１枚選んで捨てる。
