--- a/data/cards/41406613.yaml
+++ b/data/cards/41406613.yaml
@@ -2,11 +2,11 @@ konami_id: 17982
 password: 41406613
 name:
   en: Reign-Beaux, Overking of Dark World
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Reign-Beaux, Oberkönig der Finsteren Welt
+  es: Reignbeaux, Rey Supremo del Mundo Oscuro
+  fr: Règne-Galant, Roi Suprême du Monde Ténébreu
+  it: Reign-Beaux, Sovrare del Mondo Oscuro
+  pt: Rei-Beaux, Rei Supremo do Mundo Negro
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>魔<rt>ま</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>王<rt>おう</rt></ruby> レイン
   ja_romaji: Ankokukai no Mashin'ō Rein
   ko: 암흑계의 마신왕 레인
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can Special Summon this card (from your GY) by returning 1 Level 7 or lower "Dark World" monster you control to the hand. If this card is discarded to the GY by card effect: You can add 1 Level 5 or higher "Dark World" monster from your Deck to your hand, except "Reign-Beaux, Overking of Dark World", then, if this card was discarded from your hand to your GY by an opponent's card effect, you can Special Summon 1 Level 4 or lower "Dark World" monster from your Deck or GY to either field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst diese Karte als Spezialbeschwörung (von deinem Friedhof) beschwören, indem du 1 „Finsteren Welt“-Monster der Stufe 7 oder niedriger, das du kontrollierst, auf die Hand zurückgibst. Falls diese Karte durch einen Karteneffekt auf den Friedhof abgeworfen wird: Du kannst deiner Hand 1 „Finsteren Welt“-Monster der Stufe 5 oder höher von deinem Deck hinzufügen, außer „Reign-Beaux, Oberkönig der Finsteren Welt“, dann, falls diese Karte durch einen Karteneffekt eines Gegners von deiner Hand auf deinen Friedhof abgeworfen wurde, kannst du 1 „Finsteren Welt“-Monster der Stufe 4 oder niedriger als Spezialbeschwörung von deinem Deck oder Friedhof auf eine beliebige Spielfeldseite beschwören.
+  es: |-
+    Puedes Invocar esta carta de Modo Especial (desde tu Cementerio) devolviendo a la mano 1 monstruo "Mundo Oscuro" de Nivel 7 o menor que controles. Si esta carta es descartada al Cementerio por efecto de una carta: puedes añadir a tu mano 1 monstruo "Mundo Oscuro" de Nivel 5 o mayor en tu Deck, excepto "Reignbeaux, Rey Supremo del Mundo Oscuro" y después, si esta carta fue descartada de tu mano a tu Cementerio por efecto de una carta del adversario, puedes Invocar de Modo Especial, desde tu Deck o Cementerio, 1 monstruo "Mundo Oscuro" de Nivel 4 o menor a cualquier Campo.
+  fr: |-
+    Vous pouvez Invoquer Spécialement cette carte (depuis votre Cimetière) en renvoyant 1 monstre "Monde Ténébreux" de max. Niveau 7 que vous contrôlez à la main. Si cette carte est défaussée au Cimetière par un effet de carte : vous pouvez ajouter 1 monstre "Monde Ténébreux" de min. Niveau 5 ("Règne-Galant, Roi Suprême du Monde Ténébreux" exclu) depuis votre Deck à votre main, puis, si cette carte a été défaussée depuis votre main à votre Cimetière par un effet de carte de l'adversaire, vous pouvez Invoquer Spécialement 1 monstre "Monde Ténébreux" de max. Niveau 4 depuis votre Deck ou Cimetière sur l'un des Terrains.
+  it: |-
+    Puoi Evocare Specialmente questa carta (dal tuo Cimitero) facendo ritornare 1 mostro "Mondo Oscuro" di Livello 7 o inferiore che controlli nella mano. Se questa carta viene scartata al Cimitero dall'effetto di una carta: puoi aggiungere 1 mostro "Mondo Oscuro" di Livello 5 o superiore dal tuo Deck alla tua mano, eccetto "Reign-Beaux, Sovrare del Mondo Oscuro", poi, se questa carta è stata scartata dalla tua mano al tuo Cimitero dall'effetto di una carta dell'avversario, puoi Evocare Specialmente 1 mostro "Mondo Oscuro" di Livello 4 o inferiore dal tuo Deck o Cimitero su qualsiasi Terreno.
+  pt: |-
+    Você pode Invocar este card por Invocação-Especial (do seu Cemitério) ao devolver 1 monstro "Mundo Negro" de Nível 7 ou menos que você controla para a mão. Se este card for descartado para o Cemitério por um efeito de card: você pode adicionar 1 monstro "Mundo Negro" de Nível 5 ou mais do seu Deck à sua mão, exceto "Rei-Beaux, Rei Supremo do Mundo Negro" e, depois, se este card foi descartado da sua mão para o seu Cemitério por um efeito de card do oponente, você pode Invocar por Invocação-Especial 1 monstro "Mundo Negro" de Nível 4 ou menos do seu Deck ou Cemitério em qualquer campo.
   ja: |-
     ①：このカードは自分フィールドのレベル７以下の「暗黒界」モンスター１体を持ち主の手札に戻し、墓地から特殊召喚できる。②：このカードが効果で手札から墓地へ捨てられた場合に発動できる。デッキから「暗黒界の魔神王 レイン」以外のレベル５以上の「暗黒界」モンスター１体を手札に加える。相手の効果で捨てられた場合、さらに自分のデッキ・墓地からレベル４以下の「暗黒界」モンスター１体を選んで自分または相手フィールドに特殊召喚できる。
   ko: |-
