--- a/rush.yaml
+++ b/rush.yaml
@@ -83663,3 +83663,58 @@ sets:
     rarities:
     - Over Rush Rare
 yugipedia_page_id: 912984
+---
+konami_id:
+name:
+  en: Delirium Lampyris
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>夢<rt>む</rt></ruby><ruby>中<rt>ちゅう</rt></ruby>のランビリス
+  ja_romaji: Muchū no Ranbirisu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If your opponent has 2 or more monsters on their field, send this face-up card from your field and 1 monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Take control of 1 face-up Level 5-8 monster on your opponent's field with the same Type as the monster sent from your hand to the Graveyard to meet the requirement (move it to your field, and use it yourself).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Insect / Effect
+attribute: LIGHT
+level: 2
+atk: 800
+def: 1200
+images:
+- index: 1
+  image: DeliriumLampyris-RDORP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP1-JP061
+    set_name: Over Rush Pack
+    rarities:
+    - Super Rare
+yugipedia_page_id: 913016
