--- a/data/cards/46502744.yaml
+++ b/data/cards/46502744.yaml
@@ -144,6 +144,9 @@ sets:
     set_name: Tournament Pack 2022 Vol.1
     rarities:
     - Common
+  - set_number: SD45-JP011
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: CORE-KR045
     set_name: Clash of Rebellions
