--- a/data/cards/23434538.yaml
+++ b/data/cards/23434538.yaml
@@ -205,6 +205,9 @@ sets:
     set_name: 'Structure Deck: Overlay Universe'
     rarities:
     - Common
+  - set_number: SD45-JP014
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: EXP4-KR037
     set_name: Extra Pack Volume 4
