--- a/data/cards/36970611.yaml
+++ b/data/cards/36970611.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>PSY<rt>싸이</rt></ruby>프레임 오버로드
   ko_rr:
   zh-TW:
-  zh-CN: PSY骨架超载
+  zh-CN: 精神骨架过载
 text:
   en: |-
     Once per turn: You can banish 1 "PSY-Frame" monster from your hand or face-up from your side of the field, then target 1 card on the field; banish it face-down. During either player's turn, except the turn this card was sent to the Graveyard: You can banish this card from your Graveyard; add 1 "PSY-Frame" card from your Deck to your hand, except "PSY-Frame Overload".
@@ -32,7 +32,7 @@ text:
     ① : 1턴에 1번, 자신의 패 및 자신 필드의 앞면 표시 몬스터 중에서, "PSY(싸이) 프레임" 몬스터 1장을 제외하고, 필드의 카드 1장을 대상으로 하여 이 효과를 발동할 수 있다. 그 카드를 뒷면 표시로 제외한다. ② : 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "PSY(싸이) 프레임 오버로드" 이외의 "PSY(싸이) 프레임" 카드 1장을 패에 넣는다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，从自己手卡以及自己场上的表侧表示怪兽之中把1只「PSY骨架」怪兽除外，以场上1张卡为对象才能把这个效果发动。那张卡里侧表示除外。②：把墓地的这张卡除外才能发动。从卡组把「PSY骨架超载」以外的1张「PSY骨架」卡加入手卡。这个效果在这张卡送去墓地的回合不能发动。
+    ①：1回合1次，从自己的手牌及自己场上的表侧表示怪兽中，将1只"精神骨架"怪兽除外，以场上的1张卡为对象可以发动。将该卡以里侧表示除外。②：将墓地的此卡除外可以发动。从牌组将1张"精神骨架过载"以外的"精神骨架"卡加入手牌。此效果在此卡被送至墓地的回合不可发动。
 card_type: Trap
 property: Continuous
 series:
@@ -78,6 +78,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC128
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
