--- a/data/rush/yugipedia913044.yaml
+++ b/data/rush/yugipedia913044.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up LIGHT Attribute Machine Type monster on your field.
+    You have another face-up LIGHT Attribute Machine Type monster on your field.
   de:
   es:
   fr:
@@ -42,8 +42,6 @@ attribute: LIGHT
 level: 1
 atk: 0
 def: 0
-series:
-- Cyber
 images:
 - index: 1
   image: CyberSerpent-RDORP1-JP-OP.png
