--- a/rush.yaml
+++ b/rush.yaml
@@ -80930,8 +80930,6 @@ attribute: LIGHT
 level: 4
 atk: 1200
 def: 1300
-series:
-- Cyber
 images:
 - index: 1
   image: CyberGryphon-RDORP1-JP-OP.png
@@ -83806,7 +83804,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up LIGHT Attribute Machine Type monster on your field.
+    You have another face-up LIGHT Attribute Machine Type monster on your field.
   de:
   es:
   fr:
@@ -83834,8 +83832,6 @@ attribute: LIGHT
 level: 1
 atk: 0
 def: 0
-series:
-- Cyber
 images:
 - index: 1
   image: CyberSerpent-RDORP1-JP-OP.png
@@ -83907,7 +83903,7 @@ name:
   it:
   pt:
   ja: マルチプル・アダプター・ユニット
-  ja_romaji:
+  ja_romaji: Maruchipuru Adaputā Yunitto
   ko:
   ko_rr:
   zh-TW:
@@ -83948,3 +83944,111 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 913049
+---
+konami_id:
+name:
+  en: Doomblaze Despair
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>終<rt>しゅう</rt></ruby><ruby>焔<rt>えん</rt></ruby>の<ruby>絶<rt>ぜつ</rt></ruby><ruby>望<rt>ぼう</rt></ruby>
+  ja_romaji: Shūen no Zetsubō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's Level 8 or lower monster declares an attack on your face-up Maximum Monster, pay 600 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle the attacking monster into the owner's Deck. Then, if you have a monster in Maximum Mode on your field, inflict 600 damage to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Blaze Fiend
+images:
+- index: 1
+  image: DoomblazeDespair-RDORP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP1-JP018
+    set_name: Over Rush Pack
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 913054
+---
+konami_id:
+name:
+  en: Galactiara Eve
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ギャラクティアラ・イヴ
+  ja_romaji: Gyarakutiara Ivu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have no other monsters on your field, send 1 Galaxy Type monster with 1600 or more ATK from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send this card from your field to the Graveyard and draw 1 card. Then, if you have 3 or less monsters in your Graveyard, draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 1
+atk: 0
+def: 0
+images:
+- index: 1
+  image: GalactiaraEve-RDORP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP1-JP043
+    set_name: Over Rush Pack
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 913056
