--- a/data/cards/04991081.yaml
+++ b/data/cards/04991081.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피의 애완 드래곤－세인트 파이어 기가
   ko_rr: Haepi-ui Aewan Deuraegon - Seinteu Paieo Giga
   zh-TW:
-  zh-CN: 妖鸟宠物龙-圣火巨焰
+  zh-CN: 神鹰的宠物龙－千兆圣火
 text:
   en: |-
     Monsters cannot target Level 6 or lower "Harpie" monsters for attacks. You can only use each of the following effects of "Harpie's Pet Dragon - Fearsome Fire Blast" once per turn. If you control a Level 6 or lower WIND monster: You can Special Summon this card from your hand in Defense Position. If this card is sent from the field to the GY: You can send 1 WIND Winged Beast monster from your Deck to the GY.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 레벨 6 이하의 바람 속성 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 패에서 수비 표시로 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하는 한, 서로 레벨 6 이하의 "해피" 몬스터를 공격 대상으로 선택할 수 없다. ③: 이 카드가 필드에서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 비행야수족 / 바람 속성 몬스터 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①③效果1回合各能使用1次。①：自己场上有等级6以下的风属性怪兽存在的场合可以发动。将这张卡从手牌以守备表示特殊召唤。②：只要这张卡在怪兽区存在，等级6以下的「ハーピィ／妖鸟」怪兽就不会被选择为攻击对象。③：这张卡从场上送入墓地的场合可以发动。从卡组将1只鸟兽族·风属性怪兽送入墓地。
+    此卡名的①③效果1回合仅可各使用1次。①：自己场上有等级6以下风属性怪兽存在的情况下可以发动。将此卡从手牌以守备表示特殊召唤。②：只要此卡存在于怪兽区域，双方不可将等级6以下的"神鹰"怪兽选择为攻击对象。③：此卡从场上被送至墓地的情况下可以发动。从牌组将1只鸟兽族・风属性怪兽送至墓地。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: WIND
@@ -83,6 +83,11 @@ sets:
     - Common
     - Normal Parallel Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC166
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
