--- a/data/cards/23995346.yaml
+++ b/data/cards/23995346.yaml
@@ -32,7 +32,7 @@ text:
     "푸른 눈의 백룡" ＋ "푸른 눈의 백룡" ＋ "푸른 눈의 백룡"
   zh-TW:
   zh-CN: |-
-    「青眼白龙」＋「青眼白龙」＋「青眼白龙」。
+    "青眼白龙"＋"青眼白龙"＋"青眼白龙"
 card_type: Monster
 monster_type_line: Dragon / Fusion
 attribute: LIGHT
@@ -347,6 +347,11 @@ sets:
     set_name: 'Duelist Road -Piece of Memory- Side: Yugi Muto'
     rarities:
     - Extra Secret Rare
+  zh-CN:
+  - set_number: CL02-SC011
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
