--- a/data/cards/69145169.yaml
+++ b/data/cards/69145169.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 继承之魂
+  zh-CN: 承继之魂
 text:
   en: |-
     Tribute 1 Effect Monster, then target 1 Effect Monster your opponent controls; send it to the GY, then Special Summon 1 Level 7 or higher Normal Monster from your hand or Deck. You can only activate 1 "Successor Soul" per turn. You can only attack with 1 monster during the turn you activate this card.
@@ -31,8 +31,7 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张，这张卡发动的回合，自己只能用1只怪兽攻击。
-    ①：把自己场上1只效果怪兽解放，以对方场上1只效果怪兽为对象才能发动。那只怪兽送去墓地。那之后，从手卡·卡组把1只7星以上的通常怪兽在自己场上特殊召唤。
+    此卡名的卡1回合仅可发动1张，发动此卡的回合中，自己仅可用1只怪兽攻击。①：解放自己场上的1只效果怪兽，以对手场上的1只效果怪兽为对象可以发动。将该怪兽送至墓地。然后从手牌・牌组将1只等级7以上的通常怪兽特殊召唤至自己场上。
 card_type: Spell
 property: Quick-Play
 images:
@@ -70,6 +69,11 @@ sets:
     rarities:
     - Millennium Ultra Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL02-SC013
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
